style changes (header, shadow-overlay, title) & fix % Off not showing

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body{
 
 /* Header - Main Menu */
 body #page > header{
-    border-top: 4px solid #FFEB33;
+    border-top: 5px solid #5DADD5;
     background-color: #fdfdfd;
     border-bottom: 1px solid #eee;    
 }
@@ -203,6 +203,15 @@ header .brand img{
     margin-right: 0.3rem;
 }
 
+.search-field{
+    box-shadow: 0px 0px 8px rgba(159, 159, 159, 0.20);
+}
+
+.search-submit{
+    background-color: rgb(232, 238, 243);
+    border: solid 1px rgba(135, 146, 207, 0.35);
+}
+
 /* Cart */
 .cart .cart-icon{
     background: url('img/cart.svg');
@@ -233,6 +242,13 @@ header .brand img{
     bottom: 10px !important;
 }
 
+.shadow-overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(4, 18, 37, 0.2);
+}
+
 .slider-details-container {
     color: #FFF;
     top: 50%;
@@ -243,7 +259,7 @@ header .brand img{
 
 .slider-details-container h1{
     font-family: 'Seaweed Script';
-    font-size: 3.7rem;
+    font-size: 4rem;
 }
 
 .slider-details-container .subtitle{
@@ -252,8 +268,37 @@ header .brand img{
 }
 
 .slider-details-container .slider-title{
+    position: relative;
     color: black;
     font-weight: 700;
+    margin: 23px 0;
+    /* background-color: white; */
+    /* text-shadow: 1px 1px 20px #c0e4f5f5; */
+}
+
+.slider-details-container .slider-title::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    background-color: rgb(43, 117, 230, 0.6);
+    width: 100%;
+    max-width: 650px;
+    height: 60px;
+    padding: 30px;
+    transform: translate(-25px, -15px);
+    z-index: -1;
+}
+
+.slider-details-container .slider-title::after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    background-color: rgb(255, 255, 255, 0.5);
+    width: 100%;
+    max-width: 650px;
+    height: 50px;
+    transform: translate(-5px, 5px);
+    z-index: -1;
 }
 
 .slider-details-container a{
@@ -1177,12 +1222,12 @@ p, ul li a, .nav-links a, .nav-links span{
         padding: 10px 0;
     } 
 
-    .search input[type="search"]{
+    /* .search input[type="search"]{
         width: 75px;
-    }     
+    }      */
 
     .search-form input[type="search"]{
-        width: 45%;
+        width: 450px;
     }
 
     .slider-details-container{
@@ -1192,6 +1237,11 @@ p, ul li a, .nav-links a, .nav-links span{
 
     .slider-title h3 {
         font-size: 2em;
+    }
+    
+    .slider-details-container .slider-title::before,
+    .slider-details-container .slider-title::after{
+        height: 80%;
     }
 
     .slider-details-container .subtitle {
